<resources>
    <string name="app_name">hello</string>
    <string name="hello">hello</string>
    <string name="txt_label">Hello Android</string>
    <string name="btn_label">fifth</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="btn_config_label">Won</string>
    <string name="rmb_hint">Input RMB</string>
    <string name="rmb1_hint"></string>
    <string name="Save">save</string>
    <string name="menu_open_setting">Setting</string>
    <string name="lable_add1">+1 point</string>
    <string name="lable_add2">+2 points</string>
    <string name="lable_add3">+3 points</string>
    <string name="btn_reset_label">Reset</string>
</resources>